fixed the nav.  Had to adjust z-index on the .header-wrapper which is on the same level as my components

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -17,9 +17,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 } */
-.app-container {
-  z-index: 0;
-}
+
+/* .app-container {
+  z-index: 1;
+} */
 
 .route-container {
   width: 100%;
