--- a/src/components/layout/header/Header.scss
+++ b/src/components/layout/header/Header.scss
@@ -4,4 +4,5 @@
     height: 100vh;
     position: fixed;
     /* display: flex;  */
+    z-index: 999;
 }
